[tool.poetry]
name = "presence-schedule"
version = "0.1.0"
description = ""
authors = ["Roman505050 <myhun59@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
schedule = "^1.2.1"
sqlalchemy = "^2.0.27"
aiohttp = "^3.9.3"
pydantic-settings = "^2.2.1"
pydantic = "^2.6.2"
pytz = "^2024.1"
asyncpg = "^0.29.0"
aioschedule = "^0.5.2"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
